[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RoomWorld"
version = "0.0.1"
authors = [
  { name="Elijah Grubbs", email="grubbse@umich.edu" },
]
description = "A package implementing the Room Gridworld for EECS 498."
readme = "README.md"
requires-python = ">=3.8"